[package]
name = "genuine-nes-emulator-rust"
version = "0.1.0"
authors = ["Abhinav Tripathi <tripathi_a@worksap.co.jp>", "Ravi Kumar <rdahiya0213@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"

[features]
default = []
debug = []
release = []